[metadata]
name = gravity-falls
version = 0.0.2
author = er-knight (Ajay Dandge)
author_email = menobleknight@gmail.com
description = Implementation of famous ancient ciphers and encryption techniques
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/er-knight/gravityfalls
project_urls =
    Bug Tracker = https://github.com/er-knight/gravityfalls/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src